--- a/chamber/join.html
+++ b/chamber/join.html
@@ -84,8 +84,10 @@
             </fieldset>
             <div id="business" class="formField"><label> Business Description:<br><textarea></textarea></label></div>
             <div><input name="formLoadTime" type="hidden"></div>
+            <div class="formfield">
             <label for="submit" id="submitLabel">Submit</label>
             <input id="submit" name="submit" type="submit" value="Join Now!">
+            </div>
         </form>
 
         <section id="membershipDescriptions">
