--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
         <div id="headerWrapper">
             <picture>
                 <source srcset="images/logo.webp">
-                <img src="images/logo.png" alt="logo">
+                <img src="images/logo.png" alt="Rexburg Chamber of Commerce Logo">
             </picture>
             <div>
                 <h1>Rexburg</h1>
@@ -92,14 +92,12 @@
             </p>
             <div id="output">
             </div>
-            <div>
-                Temperature
+           <div>
+            <label>Temperature:<input id="temperature" type="text"></label>
             </div>
-            <input id="temperature" type="text">
             <div>
-                Wind Speed
+            <label>Wind Speed:<input id="windSpeed" type="text"></label>
             </div>
-            <input id="windSpeed" type="text">
             <button id="windChillBtn" onclick="doInputOutput()" type="button">
                 Calculate Wind Chill
             </button>
@@ -150,7 +148,7 @@
         <div>
             <picture>
                 <source srcset="images/logo.webp">
-                <img src="images/logo.png" alt="logo">
+                <img src="images/logo.png" alt="Rexburg Chamber of Commerce Logo">
             </picture>
             <p>
                 Rexburg Chamber of Commerce
