--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,6 +33,7 @@
                                     id="hamburger" src="images/hamburger-menu.png.png"></a></li>
                         <li class="primaryFont"><a href="index.html">Home</a></li>
                         <li class="primaryFont"><a href="discover.html">Discover</a></li>
+                        <li class="primaryFont"><a href="directory.html">Directory</a></li>
                         <li class="primaryFont"><a href="join.html">Join</a></li>
                         <li class="primaryFont"><a href="contact.html">Contact Us</a></li>
                     </ul>
