--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -51,6 +51,39 @@
     </header>
     <main>
         <h2>Contact Us!</h2>
+
+        <section id="contact">
+            <h3>Points of Contact:</h3>
+            <div class="leaderCtn">
+                <h4 class="boardLeader">Jake Mangas</h4>
+                President & CEO
+                (530) 225-4433, ext. 104
+            </div>
+            <div class="leaderCtn">
+                <h4 class="boardLeader">Erin Hull</h4>
+                Vice President of Marketing and Communications
+                530.225.4433, ext. 102
+            </div>
+            <div class="leaderCtn">
+                <h4 class="boardLeader">Haley Soule</h4> Kennedy
+                Membership Director
+                (530) 225-4433, ext. 101
+            </div>
+            <div class="leaderCtn">
+                <h4 class="boardLeader">Justine Lehman</h4>
+                Bookkeeper/Grant Project Manager
+                (530) 225-4433
+            </div>
+            <div class="leaderCtn">
+               <h4 class="boardLeader">Mandi Kernaghan</h4>
+                Operations Assistant
+                (530) 224-443, ext. 100
+            </div>
+            </div>
+        </section>
+
+
+        <h3 id="cta">Help us get in touch with your business!</h3>
         <form action="thankyou.html" method="get">
             <div class="formfield">
                 <label for="firstName">Name:</label><input id="firstName" name="firstName" type="text">
