--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -58,7 +58,7 @@
             north-northeast of the city of Boise.
         </div>
         <div class="galleryCtn">
-            <img class="galleryImg" l class="galleryImg" oading="lazy" src="images/gallery/sawToothRange.jpg"
+            <img class="galleryImg" loading="lazy" src="images/gallery/sawToothRange.jpg"
                 alt="Saw Tooth Mountain Range">
             The Sawtooth Range is a mountain range of the Rocky Mountains in central Idaho reaching a maximum elevation
             of 10,751 feet at the summit of Thompson Peak. It encompasses an area of 678 square miles. There are 57
