--- a/chamber/index.html
+++ b/chamber/index.html
@@ -74,7 +74,7 @@
             <p>The current conditions are: <span id="currently"></span></p>
 
             <figure>
-                <img src="" alt="" id="weathericon">
+                <img id="weathericon">
                 <figcaption></figcaption>
             </figure>
 
@@ -102,7 +102,6 @@
             <h2>Thankful Transport</h2>
             <img src="images/truck.png" alt="Thankful Transport logo">
             <h3>"We get it there for you!"</h3>
-            <hr>
             <div>
                 hello@thankfultransport.com<br>
                 +999-999-9999 | <a href="#" target="_blank">Thankful Transport</a>
@@ -112,7 +111,6 @@
             <h2>Code Primera</h2>
             <img src="images/codePrimera.png" alt="Code Primera logo">
             <h3>An after school coding instructional program.</h3>
-            <hr>
             <div>
                 contact@codeprimera.com<br>
                 +999-999-9999 | <a href="#">Code Primera</a>
@@ -128,7 +126,7 @@
             </div>
         </div>
         <div class="mainSection" id="join">
-            <a href="#">Join Us!</a>
+            <a href="join.html">Join Us!</a>
             Discover how to join the chamber of commerce and how it will benefit your organization!
         </div>
     </main>
