--- a/chamber/index.html
+++ b/chamber/index.html
@@ -71,6 +71,7 @@
             <h2>Rexburg, Idaho</h2>
 
             <p>The current temperature is <span id="temp"></span>&deg;F.</p>
+            <p>The current wind speed is <span id="wind"></span> mph.</p>
             <p>The current conditions are: <span id="currently"></span></p>
 
             <figure>
