directory grids and spacing

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="styles/directory.css">
+    <link type="text/css" rel="stylesheet" href="styles/medium.css">
     <link type="text/css" rel="stylesheet" href="styles/large-directory.css">
     <title>Directory | Rexburg Chamber</title>
 </head>
