--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -54,33 +54,59 @@
     <main>
         <div class="galleryCtn">
             <img class="galleryImg" loading="lazy" src="images/gallery/bogusBasin.jpg" alt="Bogus Basin">
-            Bogus Basin Mountain Recreation Area is a ski area in Boise County, Idaho, sixteen road miles (26 km)
-            north-northeast of the city of Boise.
+            <h4>Population: N/A</h4><br>
+            Bogus Basin Mountain Recreation Area is a ski area in Boise County, Idaho, sixteen road miles
+            north-northeast of the city of Boise. Bogus is operated by the Bogus Basin Recreation Association, a
+            non-profit organization, on private and leased land in the Boise National Forest. Ski
+            season generally runs from Thanksgiving weekend until the weekend preceding April 15, depending on snow
+            conditions. The area also has cross-country skiing on 23 miles of Nordic trails. The area probably got its
+            name during the 19th-century gold rush. Crooks in the hills above Boise City, known as "spelterers", would
+            make bogus gold dust by heating lead filings with a bit of real gold dust.
         </div>
         <div class="galleryCtn">
             <img class="galleryImg" loading="lazy" src="images/gallery/sawToothRange.jpg"
                 alt="Saw Tooth Mountain Range">
-            The Sawtooth Range is a mountain range of the Rocky Mountains in central Idaho reaching a maximum elevation
-            of 10,751 feet at the summit of Thompson Peak. It encompasses an area of 678 square miles. There are 57
-            peaks with an elevation over 10,000 feet in the Sawtooth Range, all between 10,000 to 10,751 feet in
-            elevation.
+                <h4>Population: N/A</h4><br>
+            The Sawtooth Range is a mountain range of the Rocky Mountains in central Idaho, United States, reaching a
+            maximum elevation of 10,751 feet at the summit of Thompson Peak. It encompasses an area of 678
+            square miles spanning parts of Custer, Boise, Blaine, and Elmore counties, and is bordered to
+            the east by the Sawtooth Valley. Much of the mountain range is within the Sawtooth Wilderness, part of the
+            Sawtooth National Recreation Area and Sawtooth National Forest. The mountains were named for their jagged
+            peaks
         </div>
         <div class="galleryCtn">
             <img class="galleryImg" loading="lazy" src="images/gallery/challis.jpg" alt="Challis, Idaho">
+            <h4>Population: 922</h4><br>
             Challis is the largest city in Custer County, Idaho, United States. It is the county seat and its population
-            was 1,081 at the 2010 census. The 2020 census shows 902 residents, a 16.6% drop.
+            was 1,081 at the 2010 census. The 2020 census shows 902 residents, a 16.6% drop. Challis was founded in 1878
+            and named for A.P. Challis, who was a surveyor when the townsite was laid out. Challis post office was
+            established in 1878. Twin Peaks Sports, the I.O.O.F. Hall, and a number of other buildings in Challis are
+            individually listed on
+            the National Register of Historic Places, most as a result of an Idaho State Historical Society study of
+            historical resources in the town.
         </div>
         <div class="galleryCtn">
             <img class="galleryImg" loading="lazy" src="images/gallery/stanleyIdaho.jpg" alt="Stanley, Idaho">
+            <h4>Population: 122</h4><br>
             Stanley is a town in the Sawtooth Valley in Custer County, Idaho, United States. The population was 116 at
-            the 2020 census; up from 63 in 2010. The center of population of Idaho in 2000 was located in Stanley.
+            the 2020 census; up from 63 in 2010. The center of population of Idaho in 2000 was located in Stanley. Fur
+            trappers of the Hudson's Bay Company discovered the Stanley Basin in the 1820s, but it was mostly avoided
+            due to scarcity of beaver. Captain John Stanley, a Confederate Civil War veteran, led a party of
+            twenty-three prospectors through the area in 1863, but they found little gold and moved on and
+            discovered the Atlanta lode on the south end of the Sawtooths. The site was not considered a town until 1919
+            when its streets and lots were surveyed and recorded.
         </div>
         <div class="galleryCtn">
             <img class="galleryImg" loading="lazy" src="images/gallery/boise.jpg" alt="Boise Wilderness">
-            Boise is the capital and most populous city of the U.S. state of Idaho
-            and is the county seat of Ada County. On the Boise River in southwestern Idaho, it is 41 miles (66 km) east
-            of the Oregon border and 110 miles (177 km) north of the Nevada border. The downtown area's elevation is
-            2,704 feet (824 m) above sea level. The population according to the 2020 US Census was 235,684.
+            <h4>Population: N/A</h4><br>
+            The Boise National Forest’s vast landscape spans over 2.5 million acres of diverse forest and grassland.
+            Located northeast of Idaho’s capital city of Boise, recreationists can explore the North Fork Payette River
+            Canyon at 2,800 feet in elevation to the nearly 10,000 foot peak of Trinity Mountain. Whether you choose to
+            explore any of more than 500 trails, or cool off in one of over 250 lakes and reservoirs, the Boise National
+            Forest is truly an outdoor enthusiast’s dream! Boise is the capital and most populous city of the U.S. state
+            of Idaho and is the county seat of Ada County. On the Boise River in southwestern Idaho, it is 41 miles east
+            of the Oregon border and 110 miles north of the Nevada border. The downtown area's elevation is 2,704 feet
+            above sea level. The population according to the 2020 US Census was 235,684.
         </div>
     </main>
 
@@ -97,7 +123,9 @@
             </p>
             <br>info@rexburgchamber.org
             <br>+(012)345-6789
-            <br><a href="https://www.google.com/maps/place/Rexburg,+ID/@43.8300451,-111.8232024,13z/data=!3m1!4b1!4m5!3m4!1s0x53540a4b807a98b1:0x4a49d8d1d2181c73!8m2!3d43.8231096!4d-111.7924237" target="_blank">📍Location Map</a>
+            <br><a
+                href="https://www.google.com/maps/place/Rexburg,+ID/@43.8300451,-111.8232024,13z/data=!3m1!4b1!4m5!3m4!1s0x53540a4b807a98b1:0x4a49d8d1d2181c73!8m2!3d43.8231096!4d-111.7924237"
+                target="_blank">📍Location Map</a>
         </div>
         <div id="footerBottom">
             <p>&copy;<span id="year"></span>Rexburg Chamber<br>
