--- a/chamber/index.html
+++ b/chamber/index.html
@@ -75,7 +75,7 @@
             <p>The current conditions are: <span id="currently"></span></p>
 
             <figure>
-                <img id="weathericon">
+                <img src="" alt="" id="weathericon">
                 <figcaption></figcaption>
             </figure>
 
