--- a/chamber/join.html
+++ b/chamber/join.html
@@ -52,6 +52,7 @@
     </header>
 
     <main>
+        <h3>Join the Chamber!</h3>
         <form action="thankyou.html" method="get">
             <div class="formfield"><label for="firstName">First Name:</label><input id="firstName" name="firstName"
                     type="text" required></div>
